<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.b_bcourtcounter.FinalResultActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/images4" />

    <ImageView
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/alc_logo"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/teamName_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/teamAName_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamA_TextView"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#FFFFFF"/>

            <TextView
                android:id="@+id/teamBName_TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/teamB_TextView"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/gameSummary_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_below="@+id/teamName_Layout">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/totalASCore_Layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/teamA_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_Score"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/teamAScore_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="40sp"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/totalASCore_Layout"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/teamAFouls_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_Fouls"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/teamAFoulsScores_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center"/>
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#aba9a9"/>


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:id="@+id/totalSCore_Layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/teamB_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_Score"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/teamBScore_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zero"
                        android:textSize="40sp"
                        android:textColor="#FFFFFF"
                        android:layout_gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_below="@+id/totalSCore_Layout"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:id="@+id/teamBFouls_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total_Fouls"
                        android:textSize="18sp"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/teamBFoulsScores_TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/zero"
                        android:textSize="30sp"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>


    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/closeButton"
        android:textSize="16sp"
        android:background="@drawable/circular_edge"
        android:onClick="close" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/share"
        android:background="@drawable/share_button"
        android:scaleType="fitCenter"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="share_ImageButton" />

</RelativeLayout>